--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,31 +1,10 @@
 .header-logo {
-    width: auto;
-    margin: 0 auto;
-    padding: 3em 0;
     display: flex;
     flex-direction: column;
-    
 
-    &-container {
+    img {
+        width: 60%;
+        margin: 2em auto;
 
-    }
-
-
-    h1 {
-        font-size: 2.5rem;
-        text-align: center;
-        @include smallcaps;
-        font-weight: 400;
-
-    }
-
-    p.header-subtitle {
-        font-family: 'Besley', serif;
-        font-style: italic;
-        text-align: right;
-        color: $secondary-font-color;
-        font-size: 1.2em;
-        letter-spacing: 4px;
-        margin-top: -10px;
     }
 }
