--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,8 @@ nav ul.container li:hover, nav ul.container li:focus {
 
 .sidebar-container {
   padding: 1em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .sidebar-container p {
@@ -155,6 +157,8 @@ nav ul.container li:hover, nav ul.container li:focus {
   margin: 1.5em 0;
   padding: 5px;
   border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .sidebar ul {
@@ -205,6 +209,8 @@ button {
   font-weight: 300;
   letter-spacing: 3px;
   color: rgba(255, 255, 255, 0.9);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   border: none;
   padding: 1em;
   -webkit-transition: all 400ms ease;
