--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -12,6 +12,7 @@
 
     &-container {
         padding: 1em;
+        box-shadow: $bs;
 
         p {
             font-size: .75rem;
@@ -44,6 +45,7 @@
             margin: 1.5em 0;
             padding: 5px;
             border: none;
+            box-shadow: $bs;
         }
     }
 
