--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,10 +1,11 @@
 .header-logo {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
 
     img {
-        width: 60%;
-        margin: 2em auto;
+        width: 100%;
+        margin: 0 auto;
 
     }
 }
