--- a/sass/_img-tiles.scss
+++ b/sass/_img-tiles.scss
@@ -1,33 +1,39 @@
 .img-tiles {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1em 0 2em 0;
+  z-index: 1;
+
+  a {
+      width: 100%;
+      color: $font-color;
+      cursor: pointer;
+  }
+
+
+  .img-tile {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin: 1em 0 2em 0;
-    position: relative;
 
-    .img-tile {
-        width: 80%;
-        display: flex;
-        justify-content: center;
-
-        &_img {
-            width: 100%;
-            height: width;
-            object-fit: cover;
-            position: relative;
-            z-index: 1;
-            padding: .5em;
-        }
-
-        p {
-            @include script-italic;
-            position: absolute;
-            z-index: 5;
-            bottom: 40%;
-            background: $background-color;
-            padding: 2px 30px;
-            width: auto;
-            box-shadow: $bs;
-        }
+    &_img {
+      width: 100%;
+      height: 100px;
+      object-fit: cover;
+      padding: 0.5em;
     }
+
+    p.img-tile_text {
+      @include script-italic;
+      position: absolute;
+      background: $background-color;
+      padding: 2px 30px;
+      box-shadow: $bs;
+      z-index: 1;
+      
+    }
+  }
 }
