--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,43 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 2;
+}
+
+header .header-logo {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: .75em;
+  cursor: pointer;
+}
+
+header .header-logo_img {
+  height: 60%;
+  opacity: 20%;
+  margin-left: 1em;
+}
+
+header .header-logo_text {
+  position: absolute;
+  font-family: "Lexend", sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #fff;
+  margin-left: 1.5em;
 }
 
 nav {
@@ -170,8 +203,9 @@ button.nav-toggle .hamburger::after {
   transition: all 400ms ease;
 }
 
-.header-logo {
-  margin-top: 100px;
+.hero-logo {
+  margin: 6em 0 3em 0;
+  height: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -179,9 +213,48 @@ button.nav-toggle .hamburger::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
 }
 
-.header-logo img {
+.hero-logo h1 {
+  font-family: "Lexend", sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 3px;
+  font-weight: 400;
+  font-size: 1.7em;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  color: #292929;
+}
+
+.hero-logo p.hero-subtitle {
+  font-family: "Besley", serif;
+  font-style: italic;
+  letter-spacing: 3px;
+  text-align: right;
+  position: absolute;
+  right: 0;
+  margin-right: 1.7em;
+  bottom: 3.3em;
+  color: #9c9b9b;
+}
+
+.hero-logo_img {
+  width: 55%;
+  margin: 0 auto;
+  opacity: 5%;
+  position: absolute;
+  -webkit-transform: scaleX(-1) rotate(230deg) translateY(2em);
+          transform: scaleX(-1) rotate(230deg) translateY(2em);
+}
+
+.hero-logo_text {
   width: 100%;
   margin: 0 auto;
 }
@@ -254,6 +327,10 @@ button.nav-toggle .hamburger::after {
   height: 33%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.sidebar h4 {
+  font-size: 1.5rem;
 }
 
 .sidebar-container {
@@ -360,6 +437,10 @@ section button {
   transition: all 400ms ease;
 }
 
+section button:first-of-type {
+  margin-bottom: 3em;
+}
+
 section button:hover {
   background-color: rgba(29, 84, 61, 0.85);
   -webkit-transition: all 400ms ease;
@@ -370,9 +451,7 @@ section button:hover {
 .search-bar {
   border-bottom: 1px solid #f9f8f8;
   margin: 1.5em 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
 }
 
 .search-bar input {
