--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -24,6 +24,7 @@ $caps: "Lexend", sans-serif;
 $script: "Besley", serif;
 
 $bs: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+$ts: 1px 1px 2px rgba(0,0,0,0.3);
 
 @mixin smallcaps {
   font-family: "Lexend", sans-serif;
