--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,7 +1,7 @@
 .search-bar {
     border-bottom: 1px solid $light-text;
     margin: 1.5em 0;
-    display: flex;
+    display: none;
 
     input {
         width: 100%;
