--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -6,8 +6,9 @@
 
 //breakpoints
 
-$phone-breakpoint: 450px;
-$tablet-breakpoint: 650px;
+$phone-bp: 450px;
+$tablet-bp: 550px;
+$column-bp: 650px;
 
 // colors
 
