--- a/css/main.css
+++ b/css/main.css
@@ -222,31 +222,9 @@ button.nav-toggle .hamburger::after {
   position: relative;
 }
 
-.hero-logo h1 {
-  font-family: "Lexend", sans-serif;
-  text-transform: uppercase;
-  font-weight: 300;
-  letter-spacing: 3px;
-  font-weight: 400;
-  font-size: 1.7em;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  color: #292929;
-}
-
-.hero-logo p.hero-subtitle {
-  font-family: "Besley", serif;
-  font-style: italic;
-  letter-spacing: 3px;
-  text-align: right;
-  position: absolute;
-  right: 0;
-  margin-right: 1.7em;
-  bottom: 3.3em;
-  color: #9c9b9b;
-}
-
 .hero-logo_img {
   width: 55%;
+  max-width: 250px;
   margin: 0 auto;
   opacity: 5%;
   position: absolute;
@@ -256,6 +234,7 @@ button.nav-toggle .hamburger::after {
 
 .hero-logo_text {
   width: 100%;
+  max-width: 450px;
   margin: 0 auto;
 }
 
@@ -314,6 +293,18 @@ button.nav-toggle .hamburger::after {
   -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
           box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   z-index: 1;
+}
+
+@media (min-width: 550px) {
+  .img-tiles {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .img-tiles .img-tile_img {
+    height: 100%;
+  }
 }
 
 .sidebar {
@@ -400,6 +391,47 @@ button.nav-toggle .hamburger::after {
   transition: all 400ms ease;
 }
 
+@media (min-width: 450px) {
+  .sidebar-container.about-me {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .sidebar-container.about-me .about-me_text {
+    width: 45%;
+  }
+  .sidebar-container.about-me img {
+    width: 45%;
+    height: 100%;
+    min-height: 350px;
+  }
+}
+
+@media (min-width: 650px) {
+  .sidebar .sidebar-container.about-me {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .sidebar .sidebar-container.about-me .about-me_text {
+    width: 100%;
+  }
+  .sidebar .sidebar-container.about-me img {
+    width: 100%;
+    height: 200px;
+  }
+  .sidebar h4 {
+    font-size: 1rem;
+  }
+}
+
 .page img {
   width: 100%;
   margin: 1em 0;
@@ -461,6 +493,14 @@ section button:hover {
   border: none;
 }
 
+@media (min-width: 650px) {
+  .search-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 footer {
   background: #1d543d;
   width: 100%;
@@ -520,4 +560,21 @@ h3 {
 hr {
   margin: 3em;
   color: #1d543d;
+}
+
+@media (min-width: 650px) {
+  section.article-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  section.article-section article {
+    width: 62%;
+  }
+  section.article-section aside {
+    width: 34%;
+  }
 }
