--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -7,26 +7,9 @@
     align-items: center;
     position: relative;
 
-    h1 {
-        @include smallcaps;
-        font-weight: 400;
-        font-size: 1.7em;
-        text-shadow: $ts;
-        color: $font-color
-    }
-
-    p.hero-subtitle {
-        @include script-italic;
-        text-align: right;
-        position: absolute;
-        right:0;
-        margin-right: 1.7em;
-        bottom: 3.3em;
-        color: $secondary-font-color;
-    }
-
     &_img {
         width:55%;
+        max-width: 250px;
         margin: 0 auto;
         opacity: 5%;
         position: absolute;
@@ -35,6 +18,7 @@
 
     &_text {
         width:100%;
+        max-width: 450px;
         margin: 0 auto;
     }
 }
