--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -75,5 +75,42 @@
         }
     }
 
-
 }
+
+@media (min-width: $phone-bp) {
+    .sidebar-container.about-me {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .about-me_text {
+            width: 45%;
+        }
+        
+        img {
+            width: 45%;
+            height: 100%;
+            min-height: 350px;
+
+        }
+    }
+}
+
+@media (min-width: $column-bp) {
+    .sidebar {
+        .sidebar-container.about-me {
+            flex-direction: column;
+            .about-me_text {
+                width: 100%;
+            }
+            img {
+                width: 100%;
+                height: 200px;
+            }
+        }
+        h4 {
+            font-size: 1rem;
+        }
+    }
+}
+
