--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,15 +48,18 @@ hr {
     color: $accent-color;
 }
 
-// section.article-section {
-//     display: flex;
-//     justify-content: space-between;
+@media (min-width: $column-bp) {
+section.article-section {
+    display: flex;
+    justify-content: space-between;
 
-//     article {
-//         width: 62%
-//     }
+    article {
+        width: 62%
+    }
 
-//     aside {
-//         width: 34%;
-//     }
-// }
+    aside {
+        width: 34%;
+    }
+}
+}
+
