--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -16,4 +16,15 @@ section {
     }
 }
 }
-    
+
+//Post
+
+.article-header {
+    img {
+        width: 100%;
+    }
+
+    h3 {
+        margin: 1em 0;
+    }
+}
