add archive style sheet and page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "img-tiles";
 @import "sidebar";
 @import "page";
+@import "archive";
 @import "article";
 @import "buttons";
 @import "search";
